# python-accidental-noise-library

./: .gitignore  .gitmodules  CMakeLists.txt  example.py  pyproject.toml  setup.py
docs/: Makefile  conf.py  index.rst  make.bat  python-accidental-noise-library
src/: main.cpp
